--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard",
+  "name": "next-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
     "framer-motion": "^11.2.11",
